manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  namespace: "janus-idp"
  labels:
    app.kubernetes.io/component: backstage
  annotations:
spec:
  tls:
    - hosts:
      - janus-idp.operate-first.cloud
      secretName: janus-idp-cert
  rules:
    - host: janus-idp.operate-first.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  number: 7007
